Fix some tag names and typos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjectLine</title>
+    <title>PerfectLine</title>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
     </header>
     <main>
         <div class="about">
-            <h1>ABOUT US</h1>
-            <h2>MAIN INFORMATION OF OUR COMPANY</h2>
+            <h2>ABOUT US</h2>
+            <p>MAIN INFORMATION OF OUR COMPANY</p>
             <img src="resources/images/main/about-us/image 2.png" alt="">
             <div>
                 <h3>WE ACTUALLY DO AMAZING WORKS</h3>
@@ -39,8 +39,8 @@
             </div>
         </div>
         <div class="featured">
-            <h1>FEATURED WORKS</h1>
-            <h3>We turn ideas into custom website solutions that your</h3>
+            <h2>FEATURED WORKS</h2>
+            <p>WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
             <div>
                 <img src="resources/images/main/featured-works/5.png" alt="">
                 <img src="resources/images/main/featured-works/6.png" alt="">
@@ -51,8 +51,8 @@
             </div>
         </div>
         <div class="team">
-            <h1>SMALL TEAM</h1>
-            <h3>We are web development professionals who create exclusive software</h3>
+            <h2>SMALL TEAM</h2>
+            <p>WE ARE WEB DEVELOPMENT PROFESSIONALS WHO CREATE EXCLUSIVE SOFTWARE</p>
             <div>
                 <div>
                     <img src="resources/images/main/small-team/team_3_copy.png" alt="">
@@ -98,7 +98,8 @@
                         <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
                     </ul>
                 </div>
-                <div><img src="resources/images/main/small-team/team_2.png" alt="">
+                <div>
+                    <img src="resources/images/main/small-team/team_2.png" alt="">
                     <p>Name <span>Position</span></p>
                     <p>Info</p>
                     <ul>
@@ -142,7 +143,7 @@
         </div>
     </main>
     <footer>
-        <h3>FOLLOW US</h3>
+        <p>FOLLOW US</p>
         <ul>
             <li>
                 <svg width="18" height="23" viewBox="0 0 18 23" fill="none" xmlns="http://www.w3.org/2000/svg">
