Add class names to elements

--- a/index.html
+++ b/index.html
@@ -9,39 +9,37 @@
 
 <body>
     <header>
-        <img src="resources/images/header/logo.svg" alt="">
-        <a href="#">LOGIN FOR ADMIN</a>
-        <h1>SAY HELLO TO PERFECT LINE!</h1>
-        <button>CONTACT US</button>
-        <div>
+        <img class="header__logo" src="resources/images/header/logo.svg" alt="">
+        <a class="header__link" href="#">LOGIN FOR ADMIN</a>
+        <h1 class="header__title">SAY HELLO TO PERFECT LINE!</h1>
+        <button class="header__button">CONTACT US</button>
+        <div class="header__logos">
             <img src="resources/images/header/Group 158.svg" alt="">
             <img src="resources/images/header/Group 159.svg" alt="">
         </div>
     </header>
     <main>
         <div class="about">
-            <h2>ABOUT US</h2>
-            <p>MAIN INFORMATION OF OUR COMPANY</p>
-            <img src="resources/images/main/about-us/image 2.png" alt="">
-            <div>
+            <h2 class="about__title">ABOUT US</h2>
+            <p class="about__subtitle">MAIN INFORMATION OF OUR COMPANY</p>
+            <img class="about__samples" src="resources/images/main/about-us/image 2.png" alt="">
+            <div class="about__actually-do">
                 <h3>WE ACTUALLY DO AMAZING WORKS</h3>
                 <p>We specialize in creating custom web design that are crafted to meet your brand, design and
                     functionality needs. Our websites are easy to edit, update and manage allowing you to keep your
                     website content fresh and relevant. We ensure our websites work well on desktop computers as well
                     as on mobile devices.</p>
             </div>
-            <div>
+            <div class="about__we-great">
                 <h3>WHY ARE WE GREAT?</h3>
-                <div>
-                    <p>PerfectLine is a full-service web design & development firm. We provide web design, web
-                        application, web portal, e-commerce solution and online marketing.</p>
-                </div>
+                <p>PerfectLine is a full-service web design & development firm. We provide web design, web application,
+                    web portal, e-commerce solution and online marketing.</p>
             </div>
         </div>
         <div class="featured">
-            <h2>FEATURED WORKS</h2>
-            <p>WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
-            <div>
+            <h2 class="featured__title">FEATURED WORKS</h2>
+            <p class="featured__subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
+            <div class="featured__container">
                 <img src="resources/images/main/featured-works/5.png" alt="">
                 <img src="resources/images/main/featured-works/6.png" alt="">
                 <img src="resources/images/main/featured-works/9.png" alt="">
@@ -51,100 +49,161 @@
             </div>
         </div>
         <div class="team">
-            <h2>SMALL TEAM</h2>
-            <p>WE ARE WEB DEVELOPMENT PROFESSIONALS WHO CREATE EXCLUSIVE SOFTWARE</p>
-            <div>
-                <div>
+            <h2 class="team__title">SMALL TEAM</h2>
+            <p class="team__subtitle">WE ARE WEB DEVELOPMENT PROFESSIONALS WHO CREATE EXCLUSIVE SOFTWARE</p>
+            <div class="team__container">
+                <div class="team__member">
                     <img src="resources/images/main/small-team/team_3_copy.png" alt="">
-                    <p>Name <span>Position</span></p>
-                    <p>Info</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">Name <span>Position</span></p>
+                        <p class="team__member-info">Info</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
+                <div class="team__member">
                     <img src="resources/images/main/small-team/team_4.png" alt="">
-                    <p>AL RAYHAN <span>/ UI Designer</span></p>
-                    <p>I'm an expert in Graphics, Website and can also develop sites in WordPress, JQuery.</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">AL RAYHAN <span>/ UI Designer</span></p>
+                        <p class="team__member-info">I'm an expert in Graphics, Website and can also develop sites in
+                            WordPress, JQuery.</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
+                <div class="team__member">
                     <img src="resources/images/main/small-team/3.png" alt="">
-                    <p>Name <span>Position</span></p>
-                    <p>Info</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">Name <span>Position</span></p>
+                        <p class="team__member-info">Info</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
+                <div class="team__member">
                     <img src="resources/images/main/small-team/team_1.png" alt="">
-                    <p>Name <span>Position</span></p>
-                    <p>Info</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">Name <span>Position</span></p>
+                        <p class="team__member-info">Info</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
+                <div class="team__member">
                     <img src="resources/images/main/small-team/team_2.png" alt="">
-                    <p>Name <span>Position</span></p>
-                    <p>Info</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">Name <span>Position</span></p>
+                        <p class="team__member-info">Info</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
+                <div class="team__member">
                     <img src="resources/images/main/small-team/team_3.png" alt="">
-                    <p>Name <span>Position</span></p>
-                    <p>Info</p>
-                    <ul>
-                        <li><a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a></li>
-                        <li><a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a></li>
-                    </ul>
+                    <div class="team__member-about">
+                        <p class="team__member-name">Name <span>Position</span></p>
+                        <p class="team__member-info">Info</p>
+                        <ul class="team__member-links">
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/twitter_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/site_icon.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="resources/images/main/small-team/mail_icon.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="contact">
-            <div>
-                <form action="">
-                    <input type="text" placeholder="Name*">
-                    <input type="text" placeholder="Subject*">
-                    <input type="text" placeholder="Email">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Message*"></textarea>
-                    <button>Send message</button>
+            <div class="contact__container">
+                <form action="" class="contact__form">
+                    <input class="contact__name" type="text" placeholder="Name*">
+                    <input class="contact__subject" type="text" placeholder="Subject*">
+                    <input class="contact__email" type="text" placeholder="Email">
+                    <textarea class="contact__message" placeholder="Message*"></textarea>
+                    <button class="contact__submit">Send message</button>
                 </form>
             </div>
-            <div>
-                <p>Main office: Independence Avenue, 177 Minsk, Belarus </p>
-                <p>Phone: +375(xx) xxx-xx-xx </p>
-                <p>Fax: +375(xx) xxx-xx-xx </p>
-                <p>Web: https://github.com/</p>
-                <p>E-mail: example@gmail.com</p>
-                <div></div>
+            <div class="contact__info">
+                <p class="contact__address">Main office: Independence Avenue, 177 Minsk, Belarus </p>
+                <p class="contact__phone">Phone: +375(xx) xxx-xx-xx </p>
+                <p class="contact__fax">Fax: +375(xx) xxx-xx-xx </p>
+                <p class="contact__site">Web: https://github.com/</p>
+                <p class="contact__email">E-mail: example@gmail.com</p>
+                <div class="contact__map"></div>
             </div>
         </div>
     </main>
     <footer>
-        <p>FOLLOW US</p>
-        <ul>
+        <p class="footer__links-title">FOLLOW US</p>
+        <ul class="footer__links">
             <li>
                 <svg width="18" height="23" viewBox="0 0 18 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
