Fix some class names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <img class="header__logo" src="resources/images/header/logo.svg" alt="">
         <a class="header__link" href="#">LOGIN FOR ADMIN</a>
         <h1 class="header__title">SAY HELLO TO PERFECT LINE!</h1>
@@ -52,12 +52,12 @@
             <h2 class="team__title">SMALL TEAM</h2>
             <p class="team__subtitle">WE ARE WEB DEVELOPMENT PROFESSIONALS WHO CREATE EXCLUSIVE SOFTWARE</p>
             <div class="team__container">
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/team_3_copy.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">Name <span>Position</span></p>
-                        <p class="team__member-info">Info</p>
-                        <ul class="team__member-links">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -73,13 +73,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/team_4.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">AL RAYHAN <span>/ UI Designer</span></p>
-                        <p class="team__member-info">I'm an expert in Graphics, Website and can also develop sites in
+                    <div class="employee__about">
+                        <p class="employee__name">AL RAYHAN <span class="employee__position">/ UI Designer</span></p>
+                        <p class="employee__info">I'm an expert in Graphics, Website and can also develop sites in
                             WordPress, JQuery.</p>
-                        <ul class="team__member-links">
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -95,12 +95,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/3.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">Name <span>Position</span></p>
-                        <p class="team__member-info">Info</p>
-                        <ul class="team__member-links">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -116,12 +116,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/team_1.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">Name <span>Position</span></p>
-                        <p class="team__member-info">Info</p>
-                        <ul class="team__member-links">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -137,12 +137,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/team_2.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">Name <span>Position</span></p>
-                        <p class="team__member-info">Info</p>
-                        <ul class="team__member-links">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -158,12 +158,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="team__member">
+                <div class="employee">
                     <img src="resources/images/main/small-team/team_3.png" alt="">
-                    <div class="team__member-about">
-                        <p class="team__member-name">Name <span>Position</span></p>
-                        <p class="team__member-info">Info</p>
-                        <ul class="team__member-links">
+                    <div class="employee__about">
+                        <p class="employee__name">Name <span class="employee__position">Position</span></p>
+                        <p class="employee__info">Info</p>
+                        <ul class="employee__links">
                             <li>
                                 <a href="#"><img src="resources/images/main/small-team/facebook_icon.svg" alt=""></a>
                             </li>
@@ -201,8 +201,8 @@
             </div>
         </div>
     </main>
-    <footer>
-        <p class="footer__links-title">FOLLOW US</p>
+    <footer class="footer">
+        <p class="footer__title">FOLLOW US</p>
         <ul class="footer__links">
             <li>
                 <svg width="18" height="23" viewBox="0 0 18 23" fill="none" xmlns="http://www.w3.org/2000/svg">
