Fix class names in contact block

--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
         <div class="contact">
             <div class="contact__container">
                 <form action="" class="contact__form">
-                    <input class="contact__name" type="text" placeholder="Name*">
-                    <input class="contact__subject" type="text" placeholder="Subject*">
-                    <input class="contact__email" type="text" placeholder="Email">
+                    <input class="contact__input" type="text" placeholder="Name*">
+                    <input class="contact__input" type="text" placeholder="+375 (xx) xxx-xx-xx*">
+                    <input class="contact__input" type="text" placeholder="Email*">
                     <textarea class="contact__message" placeholder="Message*"></textarea>
                     <button class="contact__submit">Send message</button>
                 </form>
             </div>
             <div class="contact__info">
-                <p class="contact__address">Main office: Independence Avenue, 177 Minsk, Belarus </p>
-                <p class="contact__phone">Phone: +375(xx) xxx-xx-xx </p>
-                <p class="contact__fax">Fax: +375(xx) xxx-xx-xx </p>
-                <p class="contact__site">Web: https://github.com/</p>
-                <p class="contact__email">E-mail: example@gmail.com</p>
+                <p class="contact__line">Main office: Independence Avenue, 177 Minsk, Belarus </p>
+                <p class="contact__line">Phone: +375(xx) xxx-xx-xx </p>
+                <p class="contact__line">Fax: +375(xx) xxx-xx-xx </p>
+                <p class="contact__line">Web: https://github.com/</p>
+                <p class="contact__line">E-mail: example@gmail.com</p>
                 <div class="contact__map"></div>
             </div>
         </div>
