Add google maps iframe

--- a/index.html
+++ b/index.html
@@ -258,7 +258,12 @@
                     <p class="contact__line">Fax: +375(xx) xxx-xx-xx</p>
                     <p class="contact__line">Web: https://github.com/</p>
                     <p class="contact__line">E-mail: example@gmail.com</p>
-                    <div class="contact__map"></div>
+                    <div class="contact__map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931.8925769965123!2d27.682801028148397!3d53.945561627742876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcecac2e9bfbf%3A0x4392476c7a6fe0f6!2z0L_RgC4g0J3QtdC30LDQstC40YHQuNC80L7RgdGC0LggMTc3LCDQnNC40L3RgdC6LCDQnNC40L3RgdC60LDRjyDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1sru!2sby!4v1707468809353!5m2!1sru!2sby"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
