--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 
 <body>
     <header class="header">
-        <img class="header__logo" src="resources/images/header/logo.svg" alt="Main logo">
-        <a class="header__link" href="#">LOGIN FOR ADMIN</a>
-        <h1 class="header__title">SAY HELLO TO PERFECT LINE!</h1>
-        <button class="header__button">CONTACT US</button>
-        <div class="header__logos">
-            <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
-            <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
+        <div class="header__container">
+            <a class="header__link" href="#">LOGIN FOR ADMIN</a>
+            <img class="header__logo" src="resources/images/header/logo.svg" alt="Main logo">
+            <h1 class="header__title">
+                SAY HELLO TO
+                <span class="header__company">PERFECT LINE!</span>
+            </h1>
+            <button class="header__button">CONTACT US</button>
+            <div class="header__logos">
+                <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
+                <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
+            </div>
         </div>
     </header>
     <main>
