Stylize about block

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PerfectLine</title>
-    <link rel="stylesheet" href="resources/source/css/style.css">
     <link rel="stylesheet" href="resources/source/css/zeroing.css">
+    <link rel="stylesheet" href="resources/source/css/style.css">
 </head>
 
 <body>
@@ -25,22 +25,26 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main">
         <div class="about">
-            <h2 class="about__title">ABOUT US</h2>
-            <p class="about__subtitle">MAIN INFORMATION OF OUR COMPANY</p>
-            <img class="about__samples" src="resources/images/main/about-us/samples.png" alt="Samples">
-            <div class="about__actually-do">
-                <h3>WE ACTUALLY DO AMAZING WORKS</h3>
-                <p>We specialize in creating custom web design that are crafted to meet your brand, design and
-                    functionality needs. Our websites are easy to edit, update and manage allowing you to keep your
-                    website content fresh and relevant. We ensure our websites work well on desktop computers as well
-                    as on mobile devices.</p>
-            </div>
-            <div class="about__we-great">
-                <h3>WHY ARE WE GREAT?</h3>
-                <p>PerfectLine is a full-service web design & development firm. We provide web design, web application,
-                    web portal, e-commerce solution and online marketing.</p>
+            <div class="about__container">
+                <h2 class="about__title">ABOUT US</h2>
+                <p class="about__subtitle">MAIN INFORMATION OF OUR COMPANY</p>
+                <img class="about__samples" src="resources/images/main/about-us/samples.png" alt="Samples">
+                <div class="about__text">
+                    <div class="about__actually-do">
+                        <h3>WE ACTUALLY DO AMAZING WORKS</h3>
+                        <p>We specialize in creating custom web design that are crafted to meet your brand, design and
+                            functionality needs. Our websites are easy to edit, update and manage allowing you to keep
+                            your website content fresh and relevant. We ensure our websites work well on desktop
+                            computers as well as on mobile devices.</p>
+                    </div>
+                    <div class="about__we-great">
+                        <h3>WHY ARE WE GREAT?</h3>
+                        <p>PerfectLine is a full-service web design & development firm. We provide web design, web
+                            application, web portal, e&#8209;commerce solution and online marketing.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="featured">
