Stylize featured block

--- a/index.html
+++ b/index.html
@@ -48,26 +48,28 @@
             </div>
         </div>
         <div class="featured">
-            <h2 class="featured__title">FEATURED WORKS</h2>
-            <p class="featured__subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
             <div class="featured__container">
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/cards.png" alt="Cards">
-                </div>
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
-                </div>
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/price.png" alt="Price">
-                </div>
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
-                </div>
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
-                </div>
-                <div class="featured__demo">
-                    <img src="resources/images/main/featured-works/book.png" alt="Book">
+                <h2 class="featured__title">FEATURED WORKS</h2>
+                <p class="featured__subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
+                <div class="featured__collection">
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/cards.png" alt="Cards">
+                    </div>
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
+                    </div>
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/price.png" alt="Price">
+                    </div>
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
+                    </div>
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
+                    </div>
+                    <div class="featured__demo">
+                        <img src="resources/images/main/featured-works/book.png" alt="Book">
+                    </div>
                 </div>
             </div>
         </div>
