Add arrows on employee about block

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-1.png" alt="Team 1">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
                             <p class="employee__info">Info</p>
                             <ul class="employee__links">
@@ -112,6 +113,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-2.png" alt="Team 2">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">AL RAYHAN <span class="employee__position">/ UI Designer</span>
                             </p>
                             <p class="employee__info">I'm an expert in Graphics, Website and can also develop sites in
@@ -143,6 +145,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-3.png" alt="Team 3">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
                             <p class="employee__info">Info</p>
                             <ul class="employee__links">
@@ -172,6 +175,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-4.png" alt="Team 4">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
                             <p class="employee__info">Info</p>
                             <ul class="employee__links">
@@ -201,6 +205,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-5.png" alt="Team 5">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
                             <p class="employee__info">Info</p>
                             <ul class="employee__links">
@@ -230,6 +235,7 @@
                     <div class="employee">
                         <img src="resources/images/main/small-team/team-6.png" alt="Team 6">
                         <div class="employee__about">
+                            <img class="employee__arrow" src="resources/images/main/small-team/arrow.svg" alt="Arrow">
                             <p class="employee__name">Name <span class="employee__position">/ Position</span></p>
                             <p class="employee__info">Info</p>
                             <ul class="employee__links">
