--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>PerfectLine</title>
     <link rel="stylesheet" href="resources/source/css/zeroing.css">
     <link rel="stylesheet" href="resources/source/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
